fixed horizontal overflow in css

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 
 body {
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 .content,
